Fix-bug: Botão no formulário não sendo alterado no modo contraste.

--- a/src/styles/css/contrast.css
+++ b/src/styles/css/contrast.css
@@ -174,3 +174,12 @@ a.badge,
   border: 1px solid white !important;
   color: white !important;
 }
+
+.contrast form button {
+  background-color: black !important;
+  border: none;
+  color: yellow !important;
+}
+.contrast form button:hover {
+  text-decoration: underline;
+}
